--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+#db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
@@ -79,8 +79,8 @@ target/
 .ipynb_checkpoints
 
 # IPython
-profile_default/
-ipython_config.py
+#profile_default/
+#ipython_config.py
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
